--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="container text-center py-5">
         <div class="row">
           <div class="col-12">
-            <p>Code &amp; docs licensed under <a href="">MIT</a> license.</p>
+            <p>Code &amp; docs licensed under <a href="https://github.com/hoppjs/hoppjs.github.io/blob/master/LICENSE.md">MIT</a> license.</p>
             <p>Copyright &copy; 2017 10244872 Canada Inc.</p>
           </div>
         </div>
