Fix terminal and add toggler

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="src/style.css">
   </head>
   <body>
-    <nav class="navbar navbar-toggleable-md">
+    <nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <a class="navbar-brand" href="#">hopp</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav navbar-right ml-auto">
@@ -40,7 +43,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-6 offset-3">
+          <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
             <div class="terminal">
               <div class="frame">
                 <span class="red"></span>
@@ -49,10 +52,10 @@
               </div>
               <ul class="shell">
                 <li class="cmd">hopp</li>
-                <li><span class="color-red">hopp:default:css</span> Starting task</li>
-    <li><span class="color-magenta">hopp:default:js</span> Starting task</li>
-    <li><span class="color-red">hopp:default:css</span> Task ended (took 21 ms)</li>
-    <li><span class="color-magenta">hopp:default:js</span> Task ended (took 14 ms)</li>
+                <li><span class="color-red">hopp:css</span> Starting task</li>
+                <li><span class="color-magenta">hopp:js</span> Starting task</li>
+                <li><span class="color-red">hopp:css</span> Task ended (took 21 ms)</li>
+                <li><span class="color-magenta">hopp:js</span> Task ended (took 14 ms)</li>
               </ul>
             </div>
             
