--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Custom Style Sheet -->
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
