--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav class="navbar navbar-toggleable-sm navbar-light">
+    <nav class="navbar navbar-toggleable navbar-light">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,16 +22,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav navbar-right ml-auto">
           <li class="nav-item">
-            <a class="nav-link lead" href="#">Guide</a>
+            <a class="nav-link lead" href="https://docs.hoppjs.com/">Guide</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link lead" href="#">Reference</a>
+            <a href="https://www.npmjs.com/browse/keyword/hopp-plugin" class="nav-link lead">Plugins</a>
           </li>
         </ul>
-        
-        <form class="form-inline ml-2">
-          <input class="form-control mr-sm-2" type="text" placeholder="search plugins">
-        </form>
       </div>
     </nav>
 
@@ -61,7 +57,7 @@
             
             <div class="text-center pt-4">
               <h2>Crazy rapid build system.</h2>
-              <a href="#" class="m-2 btn btn-primary btn-lg">Get Started</a>
+              <a href="https://docs.hoppjs.com/" class="m-2 btn btn-primary btn-lg">Get Started</a>
             </div>
           </div>
         </div>
