Add GitHub link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a href="https://www.npmjs.com/browse/keyword/hopp-plugin" class="nav-link lead">Plugins</a>
           </li>
+          <li class="nav-item">
+            <a href="https://github.com/hoppjs/hopp" class="nav-link lead">GitHub</a>
+          </li>
         </ul>
       </div>
     </nav>
