--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Custom Style Sheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
   </head>
   <body>
     <nav class="navbar navbar-toggleable navbar-light">
@@ -70,14 +70,17 @@
     <div class="container">
       <div class="row p-5">
         <div class="col-md-4 text-center">
+          <img src="src/imgs/hat.png" alt="hat" class="content-img">
           <h3>Simple &amp; Magical</h3>
           <p>hopp tries to be very magical so that your code can be simple. You do minimum work for maximum output.</p>
         </div>
         <div class="col-md-4 text-center">
+          <img src="src/imgs/scale.png" alt="scale" class="content-img">
           <h3>Extremely Scalable</h3>
           <p>Most build tools are built to be simple and often slow down drastically at scale. We've built hopp to scale first, not just for small OSS projects.</p>
         </div>
         <div class="col-md-4 text-center">
+          <img src="src/imgs/rocket.png" alt="rocket" class="content-img">
           <h3>Supercharged</h3>
           <p>We've optimized hopp to its limits. It's built to be as fast as possible without trading off usefulness or stability.</p>
         </div>
