--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>hoppJS - Crazy rapid build system.</title>
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Custom Style Sheet -->
     <link rel="stylesheet" href="src/css/style.css">
   </head>
   <body>
@@ -98,12 +95,10 @@
       </div>
     </footer>
 
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="bower_components/jquery/dist/jquery.min.js"> </script>
     <script src="bower_components/tether/dist/js/tether.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- Begin Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -113,10 +108,8 @@
       ga('create', 'UA-102146518-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <!-- End Google Analytics -->
 
-    <!-- Begin Inspectlet Embed Code -->
-    <script type="text/javascript" id="inspectletjs">
+    <script id="inspectletjs">
       window.__insp = window.__insp || [];
       __insp.push(['wid', 1570797475]);
       (function() {
@@ -124,6 +117,5 @@
       setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
       })();
     </script>
-    <!-- End Inspectlet Embed Code -->
   </body>
 </html>
