--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@
     </script>
 
     <script id="inspectletjs">
-      window.__insp = window.__insp || [];
-      __insp.push(['wid', 1570797475]);
-      (function() {
-      function ldinsp(){if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
-      setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
-      })();
+      window.__insp=window.__insp||[],__insp.push(["wid",1570797475]),function(){function t(){if(void 0===window.__inspld){window.__inspld=1
+var t=document.createElement("script")
+t.type="text/javascript",t.async=!0,t.id="inspsync",t.src=("https:"==document.location.protocol?"https":"http")+"://cdn.inspectlet.com/inspectlet.js"
+var n=document.getElementsByTagName("script")[0]
+n.parentNode.insertBefore(t,n)}}setTimeout(t,500),"complete"!=document.readyState?window.attachEvent?window.attachEvent("onload",t):window.addEventListener("load",t,!1):t()}()
     </script>
   </body>
 </html>
