Add some SEO tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <title>hoppJS - Crazy rapid build system.</title>
 
+    <meta property="og:title" content="hoppJS - Crazy rapid build system.">
+    <meta property="og:url" content="https://hoppjs.com">
+    <meta name="copyright" content="2017 10244872 Canada Inc.">
+    <meta name="description" content="Crazy rapid build system.">
+    <meta name="keywords" content="build system,build tool,build,task,task runner,javascript,js,gulp,grunt,cache,caching,fast,performant,performance,speed">
+
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/css/style.css">
   </head>
