Update terminal output based on new hopp

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
               </div>
               <ul class="shell">
                 <li class="cmd">hopp</li>
-                <li><span class="color-red">hopp:css</span> Starting task</li>
-                <li><span class="color-magenta">hopp:js</span> Starting task</li>
-                <li><span class="color-red">hopp:css</span> Task ended (took 21 ms)</li>
-                <li><span class="color-magenta">hopp:js</span> Task ended (took 14 ms)</li>
+                <li><span class="color-red">css</span> Starting task for 1 file</li>
+                <li><span class="color-magenta">js</span> Starting task for 1 file</li>
+                <li><span class="color-red">css</span> Task ended (took 21 ms)</li>
+                <li><span class="color-magenta">js</span> Task ended (took 14 ms)</li>
               </ul>
             </div>
             
