Add link to privacy policy in footer

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <div class="col-12">
             <p>Code &amp; docs licensed under <a href="https://github.com/hoppjs/hoppjs.github.io/blob/master/LICENSE.md">MIT</a> license.</p>
             <p>Copyright &copy; 2017 <a href="https://emcee.agency">10244872 Canada Inc.</a></p>
+            <p>Your data is being monitored. Checkout our <a href="https://github.com/hoppjs/hoppjs.github.io/blob/master/PRIVACY.md">privacy policy</a> for more details.</p>
           </div>
         </div>
       </div>
