--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta name="description" content="Crazy rapid build system.">
     <meta name="keywords" content="build system,build tool,build,task,task runner,javascript,js,gulp,grunt,cache,caching,fast,performant,performance,speed">
 
+    <link rel="shortcut icon" href="src/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="src/img/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/css/style.css">
   </head>
