Add google verification tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="zw3yka3nmROgFCEukNEnU_yglR0ywGXkysz-_YtOqwo">
 
     <title>hoppJS - Crazy rapid build system.</title>
 
